netpols/ingress.keycloak-db.restrict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-keycloak-db-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/component: database
  policyTypes: [ Ingress ]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: keycloak
          app.kubernetes.io/component: server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: keycloak
          app.kubernetes.io/component: backup
    ports:
    - port: 5432
      protocol: TCP
